--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,14 +1,55 @@
-@import './base.css';
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+html,
+body,
 #app {
-  height: 100vh;
-  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+@layer base {
+  .form-header {
+    @apply block text-lg font-medium text-slate-800 mb-1;
+  }
+  .form-subheader {
+    @apply block text-sm font-normal text-slate-500 mb-1;
+  }
+  .form-label {
+    @apply block text-sm font-medium text-slate-800 mb-1;
+  }
+  .form-sublabel {
+    @apply block text-sm font-normal text-slate-500 mb-1;
+  }
+  input,
+  select,
+  textarea {
+    @apply w-full text-sm rounded-md border border-slate-200 px-3 py-2 placeholder-slate-400 focus:outline-blue-600;
+  }
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  font-weight: normal;
 }
 
 path.leaflet-interactive:focus {
   outline: none;
+}
+
+select {
+  appearance: none;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
+  background-position: right 0.5rem center;
+  background-repeat: no-repeat;
+  background-size: 1.5em 1.5em;
+  padding-right: 2.5rem;
+  -webkit-print-color-adjust: exact;
+  print-color-adjust: exact;
 }
